@@ -1,6 +1,11 @@
 =======================================================================
 Date        :   Version:    Description
 =======================================================================
+
+2023-06-07  :   1.0.2       Tested with WooCommerce 7.7.2 and Wordpress 6.2.2.
+                            Update for PHP 8.0.
+                            Add Buyer Return and Notify URL configuration instructions.
+
 2022-02-03  :   1.0.1       Added GitHub updater functionality.
                             Tested with WooCommerce 6.0 and Wordpress 5.9
                             SiD Secure EFT branding update. 
